# scriptian

./: .editorconfig  .markdownlint.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  hola.txt  jaj.rs
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yaml  docs_improvement.yaml  feature_request.yaml
.github/workflows/: code_quality.yaml  commit_linting.yaml  markdown_linting.yaml  release.yaml
src/: main.rs
