[package]
name = "scriptian"
description = "A simple and efficient tool for managing and running scripts"
version = "0.20.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/jeangiraldoo/scriptian"
readme = "README.md"

[dependencies]
clap = { version = "4.5.35", features = ["derive"] }

[[bin]]
name = "script"
path = "src/main.rs"
